# server/components/settings/settingsEntity.ts
@@ -6,9 +6,6 @@ export class Settings {
     id: string;
 
     @Column('text')
-    userName: string;
-
-    @Column('text')
     repoName: string;
 
     @Column('text')
